# ChangeLog for perl-core/Compress-Raw-Bzip2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Bzip2/ChangeLog,v 1.49 2012/12/08 15:17:52 tove Exp $

*Compress-Raw-Bzip2-2.59.0 (08 Dec 2012)

  08 Dec 2012; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.59.0.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.55.0 (06 Aug 2012)

  06 Aug 2012; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.55.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Compress-Raw-Bzip2-2.52.0 (02 May 2012)

  02 May 2012; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.52.0.ebuild:
  Version bump

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  Compress-Raw-Bzip2-2.49.0.ebuild:
  keyword ~amd64-fbsd

*Compress-Raw-Bzip2-2.49.0 (21 Feb 2012)

  21 Feb 2012; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.49.0.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.43.0 (23 Nov 2011)

  23 Nov 2011; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.43.0.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.40.0 (31 Oct 2011)

  31 Oct 2011; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.40.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org>
  Compress-Raw-Bzip2-2.024.ebuild, Compress-Raw-Bzip2-2.33.ebuild,
  Compress-Raw-Bzip2-2.35.0.ebuild, Compress-Raw-Bzip2-2.36.0.ebuild,
  Compress-Raw-Bzip2-2.37.0.ebuild:
  Drop ~sparc-fbsd KEYWORD

*Compress-Raw-Bzip2-2.37.0 (23 Jun 2011)

  23 Jun 2011; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.37.0.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.36.0 (21 Jun 2011)

  21 Jun 2011; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.36.0.ebuild:
  Version bump

*Compress-Raw-Bzip2-2.35.0 (12 May 2011)

  12 May 2011; Torsten Veller <tove@gentoo.org>
  +Compress-Raw-Bzip2-2.35.0.ebuild:
  Version bump
