@@ -12,6 +12,7 @@ DIST Compress-Raw-Bzip2-2.049.tar.gz 124790 SHA256 7881473e0ab5ecc6ce609382e4f74
 DIST Compress-Raw-Bzip2-2.052.tar.gz 124842 SHA256 fdea5fda185c7d64eafe774c3dd61aeaf255479e2c43d49c9b924f658b343c3f SHA512 26f6a2325eebba57879d916aeebdf3aebcb735809ffc064bcb9b7bff8cba8962e6483b99770f499f7fa410b607410310848ba065d7a5c7a40cfa27a0a110a3ed WHIRLPOOL 2ad5ff75d26df4b0837298c7c4379173e2d62c307a22bbff61c32b902c4adb25dfa4ccd627d6c08e43814802e7faae957e1b01012a05d6b1e029db73d69d8c13
 DIST Compress-Raw-Bzip2-2.055.tar.gz 124910 SHA256 a857dabc191b3ace19353ac455e5c1316af52c3bbe606a353dc8f711e3535ae3 SHA512 54fc4741a91845bd38403682dc8a8c55783b3e1da3975c1f5e7f64f06fdad91ba9b276e65af71e666d125c2a370d4a6270a82e44e698cd88f35fcc1537cc2a40 WHIRLPOOL 06833db19600ae549e46ab3f5283260c9594e4d6bb1d029349da968e6f66ae10e9045877cc59b6050be6483a0e1979ac00f3ef8e0c904bcb394e5d654e15f4c6
 DIST Compress-Raw-Bzip2-2.059.tar.gz 135874 SHA256 199cb3f228a854b0e3925e291c5875f699bbcb9c3257c9aa5341ca3fb90e5a78 SHA512 831a1c092efcb40dd3bb60966d4bb9609d57d9668323019ad6904048b72110b882ff504ca52f70f86369ce03ef8d66da998f4409f4c1f2c7f460ea7e0d4bbd18 WHIRLPOOL 0910b37af8defb136b46a5aefe3c5a7d9fbf505e02dbdc4e53c7cfafe317ee520f99735db2da2b19152ad6a62460ed9fa6bda9708d6ba0422928a5588c4d68d4
+DIST Compress-Raw-Bzip2-2.060.tar.gz 135892 SHA256 a76fcede09de49c6e4415471487635267ebe8d8458ea439442868b491fe45f09 SHA512 e632e43652860d1105e19e49117498f824cbd170c3d0895cd922056c490a31414c78b84fdd406cff8dc6d8d4b4487db9c90f614cd7053d8f8c6d37602321d0fc WHIRLPOOL ad45e878138f14f467896ae5138c8a73302ceab54a84fa984367c93d1d0f5859952cc118050a6af5736e85088e2a3cc801c59bb202d388d5d6921f4552387410
 EBUILD Compress-Raw-Bzip2-2.024.ebuild 812 SHA256 642774c5c29e4fe2469c3932c962d3e2ff6c132db4976dc3c39d2b4f9d367bdb SHA512 8480e1fb07fae422971b4bbaf87b5100b63c38a8ad944bc5c7416c8d32feabeb28d641781784385d212b6e09ea48b49dd97f1e015801c390ee4be9e1e1335895 WHIRLPOOL c3a7364584b38cdbacedf2e35fcd1263eb1382d33e2268b25b4d13ece9f013579af5cf4139f50c6d2ecb424553baf0f2f3e3bee6d5370ba59b6c8603b79b9f1f
 EBUILD Compress-Raw-Bzip2-2.33.ebuild 980 SHA256 01eb49897574fcaf7b21a7d563d5ed2d3726c031e76d76c3b5e7a58134235ac5 SHA512 bd51112365feb53922b5b55f1aca9fb15517a246b51613aba03510c4368f6c48b21eba0bbf16b2f81ab22803099554f886a37cd2cdd6ffc5ce75481d40c5611b WHIRLPOOL abba9fb4e0897328e1f778b5e66b8ed62dd01332e89794b7d1cb8822c3788ab08e6e61c2e54e99ce448cbea93e2727bc4d7ab6283340e11a292300022120e9ac
 EBUILD Compress-Raw-Bzip2-2.35.0.ebuild 988 SHA256 f4e84b27c82aead1d8a7aa6fdd4d2abb02baa60eeba7d7e422fea4278519cca4 SHA512 f975b091b64486e8654f021b36e2c2a957340ceb3d3065b72ee2dc3aaf442c0b8b20cb526159505c2dfcd17d09782e7b494931b4e433efb19235d203f59e08e1 WHIRLPOOL 25dad36636ccc9c0b349b294529adfec5e125379785afb9ef5f501d1a8aff98163cf71118c3cd935bb7088aa9df2d3cceb2a747b684090ab9560a34b817fdcc0
@@ -23,12 +24,13 @@ EBUILD Compress-Raw-Bzip2-2.49.0.ebuild 1004 SHA256 0211b8b71384c7485716b124de44
 EBUILD Compress-Raw-Bzip2-2.52.0.ebuild 1000 SHA256 2a26dd7c929cdb4eb816c28f999bef2b448a5952572fd29ed1cc8c5617c63a7c SHA512 284fbdd78446a668dceffd8e855a398363ca628246a9f38a78a76e602da4a6fd3966832f812c14759c3d04f3af69345f8415e54de33d652b5d1d4fb012a2cc36 WHIRLPOOL 4acbce8df026d38b8c5fbc94483cc66aaf7d6232676fd326b82c5f58847ee0975aff3e74fb3c5beed77f4f74d8f787aa426c1dc5b9514836dd71aafe8ba35ad5
 EBUILD Compress-Raw-Bzip2-2.55.0.ebuild 1000 SHA256 246861a962bfb73c5ebbe165ed24becdac63c95fae7f5bd04deb31515814972e SHA512 3b1596a96110e4bbf95b74f7a534f4626d3085d23fa50904fd3819326bc1b2347816a752587a0938f12da6383ead2abe6a82696545174fbd01ac575f0ce3e333 WHIRLPOOL 435c2e90efb9883fd0815a7b6a3981e043a87a7914cf56f90deed19a2f46ba245e96e3db16c7ecfb773ce93fe2ab43a9e642a78aff01e50aeab0fe283987e4fc
 EBUILD Compress-Raw-Bzip2-2.59.0.ebuild 1000 SHA256 cf2537cc01225272be88457b757099eb3a9f2c8640acb1dfab17fc377db324e7 SHA512 9695ee098a9ccfd6e281cf559c5f7a0d76cfed4ba15f151acf3996013ec76d306162bc8cc59e248a121ec77a6ea387f9c5522d59c71e0ae645c440f3bfda1054 WHIRLPOOL 63f0003816eca3d524dd2ca39385a5d845a893aa78034d0b99b6f7360f217b5882444840091f8dcbd22e830868a43acc10b1dd2d8f1d6bb17a9bbeb342d0e456
-MISC ChangeLog 8388 SHA256 074a18f61b6462eaca78bfae8e953b53d116abe364c9b3964844c8f6b0419f44 SHA512 3638a70ac4e853464e0e269e51980b2aef65324ce635324d83736d53eb1abe0e8645d0a3dbc7f505197ceb9deef285b3d7fed0b0a6cf1dd6edb9c59d0eb085cb WHIRLPOOL ea4713c8062d62639f57c7c5f7b5021ae6f8749fdce1dd33f1145f8b5eb22411f25271821382d40d2c19c6086f350829046163897bb4b07ad3ce352033b3dc81
+EBUILD Compress-Raw-Bzip2-2.60.0.ebuild 1000 SHA256 7aa43a7155bf003bcffcb9b79ddf574187f34e3dfe5f4c0c8ac348afe24a86e8 SHA512 28db769d6404fcf9578d9c6e14dbc3f399a197c0da0b96b1ddb14517e60ffae471e67d87afb43bdd8c7fbec8191a72743aa3c6b141fb336c5a9ae9679ae3b38e WHIRLPOOL 95b5b3a91b057751ce31f76355799b742bae9c799e7cfe5f02ca8caf25cbae283da58e4fe6bd3f32f3374f28ecda3c130c6af1c3ec67463112d208037204a06b
+MISC ChangeLog 8531 SHA256 2680a28bdc35deb36ee5be0459127e0ce478e06f14b44569b970ca8a930f1bc7 SHA512 c72df93e061bf3b3af9493f3d9b1d118677abf8eaa5cde27e94cf5708ac37e334d23549616f5a86a84efb6d9cb54a086a2a4057b8161d8e3c42ab37a79cac741 WHIRLPOOL 04d30f7112f7a7a8fa1bfdc00fdeddd1a5521fb3ba8225f3245e18badae52b023b9f173fb453df1cc73aac2b5d22b4409373832880ee8ce214c036541000bb83
 MISC metadata.xml 311 SHA256 13e0dc5b89942beae58333092ad0670ef9f5f1fb29298fd0c68b1b70926556fb SHA512 43cd8d510db11089df41d56c62393637cf0ddee4b69f432eec620f9d61ea0f297c26b7e528062aee92738a30717ed7cd62562d1c0500771f796f9059f8c2d9d0 WHIRLPOOL 236351bf9385d02cb88b0c18f5708b9d0daa5837c38c15ebad8e9a2e5f71de07782b1c370893bea36a5e21036bdc189e9ed89d2397cfcace470ae4f11ac10555
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDDWiEACgkQV3J2n04EauyHsgCfUh+Tqe4nhQ5EuZdrI/XfdmBj
-uI0An17XohXM+CtnGXtJIX5MM6D1FYkG
-=ktEc
+iEYEAREIAAYFAlD6jn4ACgkQV3J2n04EauwFDACgmAySICjN2IjqEiw1uWtigVar
+lN0AnRLUI5u4/VBn1Hxz7VkcWRhEsDrm
+=Ck2K
 -----END PGP SIGNATURE-----
